# proj_test

./: .gitignore  CMakeLists.txt  LICENSE  README.md
libr/: CMakeLists.txt
libr/src/: library.cpp  library.hpp
prog/: CMakeLists.txt
prog/src/: main.cpp
